core/static/css/v2/layout/components/main-content/author-info.less
@import "../../../colors/colors";
@import "../../../layout/mixins";
@import "../../../layout/responsive";

.navbar {
  margin-bottom: 0;
}

#main_content {
  margin-top: 0;
}

.author-info {
  padding-top: 40px;
  padding-bottom: 15px;
  margin-bottom: 25px;
  background-color: @darker-grey;
  color: @light-grey;
  line-height: 40px;
  a.btn {
    &.primary {
      background: #B25B46;
      padding: 10px;
    }
  }
  .author-name {
    color: #F64F28;
    .font-size(30);
  }

  .author-block:not(:last-child) {
    border-bottom: 1px solid @grey;
    margin-bottom: 25px;
  }

  .author-bio {
    color: @grey;
    margin-top: 3px;
  }

  i {
    &.icon-handle {
      .font-size(20);
      color: @grey;
      padding-right: 6px;
      vertical-align: middle;
      width: 9%;
    }
  }

  .handle {
    vertical-align: middle;
    display: inline-block;
    a {
      color: @light-grey;
    }
  }

  ul {
    margin: 0 0 20px 0;
    .social-icon {
      padding: 6px 20px 4px 0;
      a {
        border: 1px solid @border-light;
        border-radius: 20px;
        display: inline-block;
        height: 30px;
        width: 30px;
        text-align: center;
        vertical-align: middle;
        margin-left: 4px;
        &:hover {
          text-decoration: none;
        }
        i {
          color: @light-grey;
          .font-size(20);
        }
      }
    }
  }

  @media (max-width: @screen-xs-max) {
    i {
      &.icon-handle {
        width: 6%;
      }
    }
  }
}

@media (min-width: @screen-lg-min) {
  #author-article-list {
    h3 {
      margin-left: -5px;
    }

    .article-tile {
      padding: 20px 20px 20px 25px;
    }
  }
}

